# projekt-grk

./: .gitignore  CMakeLists.txt  GrafikaKomputerowa.js  README.md  index.html  projekt.md  vol-01.js  vol-02.js  vol-03.js  vol-04.js  vol-05.js  vol-06.js  vol-07.js
.github/workflows/: emscripten.yml  windows.yml
assets/models/entities/: barracuda.dae  pilotfish.dae  red_snapper.dae  wild_golden_fish.dae
assets/models/foliage/: kelp.dae  seagrass.dae
assets/models/primitives/: AnimatedStick.dae  complex_cube.dae  cube.dae  plane.dae
assets/models/props/: chest.dae  coin.dae
assets/models/rocks/: rock_big1.dae  rock_small1.dae  rock_small2.dae
assets/shaders/: caustics.frag  chunk.frag  chunk.vert  coin.frag  glow.frag  glow.vert  parallaxMapping.frag  parallax_mapping.frag  rock.frag  shader_4_1.frag  shader_4_1.vert  shader_4_sun.frag  shader_4_sun.vert  shader_4_tex.frag  shader_4_tex.vert  shader_4_tex_with_parallax.frag  shader_color.frag  shader_color.vert  shader_tex.frag  shader_tex.vert  simple_color_shader.frag  simple_tex_shader.vert  simplex.frag  simplex.vert
assets/shaders/armature/: shader_color_armature.frag  shader_color_armature.vert  shadow.vert
assets/shaders/cubemap/: cubemap.frag  cubemap.vert
assets/shaders/debug/: simple_color_shader.vert  simple_tex_shader.frag  simple_tex_shader.vert  simple_uni_color_shader.frag  simple_uni_color_shader.vert
assets/shaders/fish/: cubefish.frag  normal_fish.frag  normal_fish.vert  pilotfish.frag  pilotfish.vert  shadow.frag  shadow.vert
assets/shaders/fog/: underwaterFog.frag  underwaterFog.vert
assets/shaders/instanced/: kelp.frag  kelp.vert  kelp_shadow.frag  kelp_shadow.vert
assets/shaders/particles/: bubbles.frag  bubbles.vert
assets/shaders/water/: caustics.frag  caustics.vert  env.frag  env.vert  environment.vert  simulation.frag  simulation.vert  simulation_drop.frag  simulation_update.frag  surface.frag  surface.vert
assets/sound/: chestclosed.raw  chestopen.raw  coin.raw
assets/textures/Ground_Sand1_2x2_1K/: Ground_Sand1_2x2_1K_ao.tif  Ground_Sand1_2x2_1K_height.tif  Ground_Sand1_2x2_1K_normal.tif  Ground_Sand1_2x2_1K_roughness.tif
assets/textures/Sand_Muddy7_3x3_1K/: Sand_Muddy7_3x3_1K_ao.tif  Sand_Muddy7_3x3_1K_height.tif  Sand_Muddy7_3x3_1K_roughness.tif
dependencies/: assimp-vc142-mtd.lib  libpng16_static.lib  zlibstatic.lib  zlibstaticd.lib
dependencies/physx_win_debug/: PhysXCharacterKinematic_static_64.lib  PhysXCooking_static_64.lib  PhysXFoundation_static_64.lib
dependencies/physx_win_release/: PhysXCharacterKinematic_static_64.lib
dependencies/win_amd64_static/: PhysXCharacterKinematic_static_64.lib  PhysXCooking_static_64.lib  PhysXFoundation_static_64.lib  PhysXPvdSDK_static_64.lib  ex-common.lib  glfw3.lib  libpng16_static.lib  zlibstatic.lib
dependencies/win_arm64ec_static/: glfw3.lib  libpng16_static.lib  msvcprt.lib  zlibstatic.lib
include/: Boids.hpp  Camera.h  Camera.hpp  Controller.hpp  Logger.h  Random.hpp  Render_Utils.h  ResourceLoader.hpp  Shader_Loader.h  SimplexNoiseGenerator.hpp  Sound.hpp  Texture.h  Water.hpp  objload.h  opengl.h  picopng.h
include/Animator/: AnimatedModel.hpp  Joint.hpp  JointIO.hpp
include/Camera/: Camera.hpp  Scope.hpp  Skybox.hpp
include/Controller/: Controller.hpp
include/Fish/: Barracuda.hpp  Boids.cpp  Boids.hpp  Boids.inl  Cubefish.hpp  Fish.hpp  Golden.hpp  Pilotfish.hpp  RedSnapper.hpp
include/Fog/: Fog.hpp
include/Gizmos/: Gizmos.hpp  Line.hpp
include/Glow/: GlowShader.hpp
include/Particle/: Particle.hpp  ParticleSystem.hpp
include/Physics/: ErrorCallback.hpp  Physics.hpp  RigidBody.hpp  SimulationEventCallback.hpp
include/Resources/: GameObject.hpp  GlobalEvents.hpp  Material.hpp  Mesh.hpp  Model.hpp  Resources.hpp  Vertex.hpp
include/Robot/: Robot.hpp
include/Time/: Time.hpp
include/Utilities/: glmu.hpp
include/Water/: Caustics.hpp  EnvironmentMap.hpp  Simulation.hpp  Surface.hpp  Water.hpp
include/assimp/: SmoothingGroups.inl  color4.inl  config.h.in  material.inl  matrix4x4.inl  vector3.inl
include/utils/: Compression.hpp  Cube.hpp  Frustum.hpp  Gizmos.hpp  Line.hpp  MatrixTextureArray.hpp  glmu.hpp
include/vertex/: VertexBuffer.hpp  VertexFormats.hpp
include/world/: Chest.hpp  Chunk.hpp  ChunkBorderDebugRenderer.hpp  ChunkPosition.hpp  ChunkPositionComparator.hpp  Coin.hpp  Crosshair.hpp  Object3D.hpp  Stone.hpp  World.hpp
libraries/AL/: config.h  version.h
libraries/assimp/: matrix3x3.inl  quaternion.inl  vector2.inl
libraries/glad/: glad.h
libraries/glm/gtx/: quaternion.hpp  quaternion.inl
libraries/png/: pnglibconf.h
physx_include/foundation/: PxMathUtils.h  PxPreprocessor.h
src/: Boids.cpp  Camera.cpp  Controller.cpp  Logger.c  Random.cpp  Render_Utils.cpp  ResourceLoader.cpp  Shader_Loader.cpp  SimplexNoiseGenerator.cpp  Sound.cpp  Texture.cpp  Water.cpp  glad.c  main.cpp  picopng.cpp
src/Animator/: AnimatedModel.cpp  Joint.cpp  JointIO.cpp
src/Camera/: Camera.cpp  Scope.cpp  Skybox.cpp
src/Controller/: Controller.cpp
src/Fish/: Barracuda.cpp  Boids.cpp  Cubefish.cpp  Fish.cpp  Golden.cpp  Pilotfish.cpp  RedSnapper.cpp
src/Fog/: Fog.cpp
src/Gizmos/: Gizmos.cpp  Line.cpp
src/Glow/: GlowShader.cpp
src/Particle/: Particle.cpp  ParticleSystem.cpp
src/Physics/: ErrorCallback.cpp  Physics.cpp  RigidBody.cpp  SimulationEventCallback.cpp
src/Resources/: GameObject.cpp  GlobalEvents.cpp  Material.cpp  Mesh.cpp  Model.cpp  Resources.cpp
src/Robot/: Robot.cpp
src/SOIL/: soil.c
src/Time/: Time.cpp
src/Utilities/: glmu.cpp
src/Water/: Caustics.cpp  EnvironmentMap.cpp  Simulation.cpp  Surface.cpp  Water.cpp
src/utils/: Compression.cpp  Cube.cpp  Frustum.cpp  Gizmos.cpp  Line.cpp  MatrixTextureArray.cpp  glmu.cpp
src/vertex/: VertexBuffer.cpp  VertexFormats.cpp
src/world/: Chest.cpp  Chunk.cpp  ChunkBorderDebugRenderer.cpp  ChunkPosition.cpp  ChunkPositionComparator.cpp  Coin.cpp  Crosshair.cpp  Object3D.cpp  Stone.cpp  World.cpp
storage/: create.sh  dsplit.py  models.sh  textures.sh
